--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="src\Game\CEnemyManager.cpp" />
     <ClCompile Include="src\Game\CExclamationMark.cpp" />
     <ClCompile Include="src\Game\CFallingObjects.cpp" />
+    <ClCompile Include="src\Game\CHopsAndHoopsFallCol.cpp" />
     <ClCompile Include="src\Game\CPlainsStageField.cpp" />
     <ClCompile Include="src\Game\CPlainsStageFallCol.cpp" />
     <ClCompile Include="src\Game\CHopsAndHoopsField.cpp" />
@@ -300,6 +301,7 @@
     <ClInclude Include="src\Game\CEnemyManager.h" />
     <ClInclude Include="src\Game\CExclamationMark.h" />
     <ClInclude Include="src\Game\CFallingObjects.h" />
+    <ClInclude Include="src\Game\CHopsAndHoopsFallCol.h" />
     <ClInclude Include="src\Game\CPlainsStageField.h" />
     <ClInclude Include="src\Game\CPlainsStageFallCol.h" />
     <ClInclude Include="src\Game\CHopsAndHoopsField.h" />
