--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -84,6 +84,7 @@
     <ClCompile Include="src\Game\CCutInDeath.cpp" />
     <ClCompile Include="src\Game\CCutInResult.cpp" />
     <ClCompile Include="src\Game\CCutInTest.cpp" />
+    <ClCompile Include="src\Game\CElectricLaser.cpp" />
     <ClCompile Include="src\Game\CEnemy.cpp" />
     <ClCompile Include="src\Game\CEnemyManager.cpp" />
     <ClCompile Include="src\Game\CExclamationMark.cpp" />
@@ -298,6 +299,7 @@
     <ClInclude Include="src\Game\CCutInDeath.h" />
     <ClInclude Include="src\Game\CCutInResult.h" />
     <ClInclude Include="src\Game\CCutInTest.h" />
+    <ClInclude Include="src\Game\CElectricLaser.h" />
     <ClInclude Include="src\Game\CEnemy.h" />
     <ClInclude Include="src\Game\CEnemyManager.h" />
     <ClInclude Include="src\Game\CExclamationMark.h" />
