--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -227,6 +227,9 @@
     <Filter Include="ソース ファイル\Game\Field\StageField\Sky">
       <UniqueIdentifier>{bf915bce-875e-45d7-9e24-66b57661232e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Lightning">
+      <UniqueIdentifier>{4fd87ac9-132b-4421-9fac-2815b4a7a7ce}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -834,6 +837,9 @@
     </ClCompile>
     <ClCompile Include="src\Game\CStageSky.cpp">
       <Filter>ソース ファイル\Game\Field\StageField\Sky</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CElectricLaser.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Lightning</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1466,6 +1472,9 @@
     </ClInclude>
     <ClInclude Include="src\Game\CStageSky.h">
       <Filter>ソース ファイル\Game\Field\StageField\Sky</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CElectricLaser.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Lightning</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
