--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -236,6 +236,9 @@
     <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Climb\Stage3">
       <UniqueIdentifier>{83d70674-9d63-44ba-9655-a1d7656f6cd7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Efect\Buffs\Circle">
+      <UniqueIdentifier>{c263252d-a22c-4d1c-a462-c8f42125ba43}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -838,9 +841,6 @@
     <ClCompile Include="src\Game\CElectricLaser.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Lightning</Filter>
     </ClCompile>
-    <ClCompile Include="src\Game\CCircleEffect.cpp">
-      <Filter>ソース ファイル\Game\Efect\Buffs</Filter>
-    </ClCompile>
     <ClCompile Include="src\Game\CClimbWall.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Climb\Stage3</Filter>
     </ClCompile>
@@ -852,6 +852,12 @@
     </ClCompile>
     <ClCompile Include="src\Game\CMetalLadder.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Climb\Stage2</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CInsideCircleEffect.cpp">
+      <Filter>ソース ファイル\Game\Efect\Buffs\Circle</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\COutsideCircleEffect.cpp">
+      <Filter>ソース ファイル\Game\Efect\Buffs\Circle</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1479,9 +1485,6 @@
     <ClInclude Include="src\Game\CElectricLaser.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Lightning</Filter>
     </ClInclude>
-    <ClInclude Include="src\Game\CCircleEffect.h">
-      <Filter>ソース ファイル\Game\Efect\Buffs</Filter>
-    </ClInclude>
     <ClInclude Include="src\Game\CClimbWall.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Climb\Stage3</Filter>
     </ClInclude>
@@ -1493,6 +1496,12 @@
     </ClInclude>
     <ClInclude Include="src\Game\CMetalLadder.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Climb\Stage2</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CInsideCircleEffect.h">
+      <Filter>ソース ファイル\Game\Efect\Buffs\Circle</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\COutsideCircleEffect.h">
+      <Filter>ソース ファイル\Game\Efect\Buffs\Circle</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
