--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -239,6 +239,9 @@
     <Filter Include="ソース ファイル\Game\Efect\Buffs\Circle">
       <UniqueIdentifier>{c263252d-a22c-4d1c-a462-c8f42125ba43}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Propeller">
+      <UniqueIdentifier>{0664de9d-590d-4b14-95b2-44c2f13f6af6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -858,6 +861,9 @@
     </ClCompile>
     <ClCompile Include="src\Game\COutsideCircleEffect.cpp">
       <Filter>ソース ファイル\Game\Efect\Buffs\Circle</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CPropeller.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Propeller</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1502,6 +1508,9 @@
     </ClInclude>
     <ClInclude Include="src\Game\COutsideCircleEffect.h">
       <Filter>ソース ファイル\Game\Efect\Buffs\Circle</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CPropeller.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Propeller</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
