--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -242,6 +242,9 @@
     <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Propeller">
       <UniqueIdentifier>{0664de9d-590d-4b14-95b2-44c2f13f6af6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Jumping\KInoko">
+      <UniqueIdentifier>{e29cfbb4-10ed-452e-ac22-0b938acc45aa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -724,9 +727,6 @@
     <ClCompile Include="src\Game\CNumberFloorOnce.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number</Filter>
     </ClCompile>
-    <ClCompile Include="src\Game\CJumpingKinoko.cpp">
-      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping</Filter>
-    </ClCompile>
     <ClCompile Include="src\Game\CJumpingObject.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping</Filter>
     </ClCompile>
@@ -799,12 +799,6 @@
     <ClCompile Include="src\Game\CMeat3.cpp">
       <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Meat</Filter>
     </ClCompile>
-    <ClCompile Include="src\Game\CJumpingKinokoUpDown.cpp">
-      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Game\CJumpingKinokoLeftRight.cpp">
-      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping</Filter>
-    </ClCompile>
     <ClCompile Include="src\Game\CPlainsStageField.cpp">
       <Filter>ソース ファイル\Game\Field\StageField\Plains Stage</Filter>
     </ClCompile>
@@ -864,6 +858,15 @@
     </ClCompile>
     <ClCompile Include="src\Game\CPropeller.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Propeller</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CJumpingKinoko.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\KInoko</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CJumpingKinokoLeftRight.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\KInoko</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CJumpingKinokoUpDown.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\KInoko</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1371,9 +1374,6 @@
     <ClInclude Include="src\Game\CNumberFloorOnce.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number</Filter>
     </ClInclude>
-    <ClInclude Include="src\Game\CJumpingKinoko.h">
-      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping</Filter>
-    </ClInclude>
     <ClInclude Include="src\Game\CJumpingObject.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping</Filter>
     </ClInclude>
@@ -1446,12 +1446,6 @@
     <ClInclude Include="src\Game\CMeat3.h">
       <Filter>ソース ファイル\Game\Character\CharaObject\ItemObject\Meat</Filter>
     </ClInclude>
-    <ClInclude Include="src\Game\CJumpingKinokoUpDown.h">
-      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Game\CJumpingKinokoLeftRight.h">
-      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping</Filter>
-    </ClInclude>
     <ClInclude Include="src\Game\CPlainsStageField.h">
       <Filter>ソース ファイル\Game\Field\StageField\Plains Stage</Filter>
     </ClInclude>
@@ -1511,6 +1505,15 @@
     </ClInclude>
     <ClInclude Include="src\Game\CPropeller.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Propeller</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CJumpingKinoko.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\KInoko</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CJumpingKinokoLeftRight.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\KInoko</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CJumpingKinokoUpDown.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Jumping\KInoko</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
