--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="src\Game\CExclamationMark.cpp" />
     <ClCompile Include="src\Game\CFallingObjects.cpp" />
     <ClCompile Include="src\Game\CHopsAndHoopsFallCol.cpp" />
+    <ClCompile Include="src\Game\CJumpingKinokoMove.cpp" />
     <ClCompile Include="src\Game\CMetalLadder.cpp" />
     <ClCompile Include="src\Game\COutsideCircleEffect.cpp" />
     <ClCompile Include="src\Game\CPlainsStageField.cpp" />
@@ -310,6 +311,7 @@
     <ClInclude Include="src\Game\CExclamationMark.h" />
     <ClInclude Include="src\Game\CFallingObjects.h" />
     <ClInclude Include="src\Game\CHopsAndHoopsFallCol.h" />
+    <ClInclude Include="src\Game\CJumpingKinokoMove.h" />
     <ClInclude Include="src\Game\CMetalLadder.h" />
     <ClInclude Include="src\Game\COutsideCircleEffect.h" />
     <ClInclude Include="src\Game\CPlainsStageField.h" />
