--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -92,6 +92,9 @@
     <ClCompile Include="src\Game\CFallingObjects.cpp" />
     <ClCompile Include="src\Game\CHopsAndHoopsFallCol.cpp" />
     <ClCompile Include="src\Game\CJumpingKinokoMove.cpp" />
+    <ClCompile Include="src\Game\CJumpingKinokoRotate.cpp" />
+    <ClCompile Include="src\Game\CJumpingKinokoTurnLeft.cpp" />
+    <ClCompile Include="src\Game\CJumpingKinokoTurnRight.cpp" />
     <ClCompile Include="src\Game\CMetalLadder.cpp" />
     <ClCompile Include="src\Game\COutsideCircleEffect.cpp" />
     <ClCompile Include="src\Game\CPlainsStageField.cpp" />
@@ -312,6 +315,9 @@
     <ClInclude Include="src\Game\CFallingObjects.h" />
     <ClInclude Include="src\Game\CHopsAndHoopsFallCol.h" />
     <ClInclude Include="src\Game\CJumpingKinokoMove.h" />
+    <ClInclude Include="src\Game\CJumpingKinokoRotate.h" />
+    <ClInclude Include="src\Game\CJumpingKinokoTurnLeft.h" />
+    <ClInclude Include="src\Game\CJumpingKinokoTurnRight.h" />
     <ClInclude Include="src\Game\CMetalLadder.h" />
     <ClInclude Include="src\Game\COutsideCircleEffect.h" />
     <ClInclude Include="src\Game\CPlainsStageField.h" />
